[package]
name = "fqnovel-api"
version = "0.1.0"
edition = "2021"
authors = [ "jec9ues <139811380+jec9ues@users.noreply.github.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# 升级到 0.13 或 0.12 版本（目前的主流稳定版本）
worker = "0.13"
worker-macros = "0.13"
console_error_panic_hook = "0.1.1"

anyhow = "1.0.86"

libaes = "0.7.0"
# 注意：rand 0.9 还在 alpha 阶段，如果遇到编译错误，建议降级到 0.8 稳定版
rand = "0.8" 
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22.1"
hex = "0.4.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
flate2 = "1.0"

# reqwest 在 Cloudflare Workers 环境下通常需要配合 worker 的 fetch 能力
reqwest = { version = "0.12.7", features = ["json"] }
